feat: pacote de mudanças

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,6 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <base href="$FLUTTER_BASE_HREF">
-
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -34,5 +33,8 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
+
 </body>
 </html>
